0023820: Wrong result of projection algorithm when a polygon geometry is projected on a set of multiple faces